--- a/Pandas/pandas_atsakymai1.ipynb
+++ b/Pandas/pandas_atsakymai1.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Pandas užduotys 1"
+    "# Pandas atsakymai 1"
    ]
   },
   {
@@ -19,7 +19,10 @@
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -33,7 +36,9 @@
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df = pd.read_csv('miestai_isvalyti.csv')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -171,7 +176,9 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "df.head()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -185,7 +192,9 @@
    "execution_count": 9,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df.set_index('Miestas', inplace=True)"
+   ]
   },
   {
    "cell_type": "code",
@@ -324,13 +333,15 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "df.head()"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 5 Ištraukite reikšmę, kiek gyventojų gyveno Marijampolėje 1923m."
+    "5 Ištraukite reikšmę, kiek gyventojų gyveno Marijampolėje 1923m."
    ]
   },
   {
@@ -349,7 +360,9 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "df.loc['Marijampolė', '1923']"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -380,7 +393,9 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "df['1897'].head()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -511,7 +526,9 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "df[['2019', '1970', '1923']].head(10)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -536,7 +553,9 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "df.shape"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -550,14 +569,18 @@
    "execution_count": 27,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "numbers = list(range(1, 104))"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 29,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df['nr'] = numbers"
+   ]
   },
   {
    "cell_type": "code",
@@ -703,7 +726,9 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "df.head()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -918,7 +943,9 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "df[(df['nr']>29) & (df['nr']<40)]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -932,7 +959,9 @@
    "execution_count": 37,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df.drop('nr', axis=1, inplace=True)"
+   ]
   },
   {
    "cell_type": "code",
@@ -1071,7 +1100,9 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "df.head()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1170,7 +1201,9 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "df[df['1959'] == 0]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1581,7 +1614,9 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "df[df['1897']>df['2019']]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1658,7 +1693,9 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "df[df['2019']>df['2011']][['2019', '2011']]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1757,7 +1794,15 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "df[(df['1897'] > df['1923']) &\n",
+    "   (df['1923'] > df['1959']) &\n",
+    "   (df['1959'] > df['1979']) &\n",
+    "   (df['1979'] > df['1989']) &\n",
+    "   (df['1989'] > df['2001']) &\n",
+    "   (df['2001'] > df['2011']) &\n",
+    "   (df['2011'] > df['2019'])] "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1778,7 +1823,9 @@
    "execution_count": 70,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "proc_skirtumas = ((df['2019'] - df['1989'])/df['1989'])*100"
+   ]
   },
   {
    "cell_type": "code",
@@ -1794,7 +1841,11 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "print(f'\\\n",
+    "{proc_skirtumas.idxmax()}\\t {int(proc_skirtumas.max())}%\\n\\\n",
+    "{proc_skirtumas.idxmin()}\\t{int(proc_skirtumas.min())}%')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1932,7 +1983,9 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "df.reset_index().head()"
+   ]
   },
   {
    "cell_type": "code",
