--- a/Pandas/pandas_uzduotys1.ipynb
+++ b/Pandas/pandas_uzduotys1.ipynb
@@ -19,10 +19,7 @@
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "import pandas as pd"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -36,9 +33,7 @@
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "df = pd.read_csv('miestai_isvalyti.csv')"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -176,9 +171,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "df.head()"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -192,9 +185,7 @@
    "execution_count": 9,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "df.set_index('Miestas', inplace=True)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -333,15 +324,13 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "df.head()"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "5 Ištraukite reikšmę, kiek gyventojų gyveno Marijampolėje 1923m."
+    "### 5 Ištraukite reikšmę, kiek gyventojų gyveno Marijampolėje 1923m."
    ]
   },
   {
@@ -360,9 +349,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "df.loc['Marijampolė', '1923']"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -393,9 +380,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "df['1897'].head()"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -526,9 +511,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "df[['2019', '1970', '1923']].head(10)"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -553,9 +536,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "df.shape"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -569,18 +550,14 @@
    "execution_count": 27,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "numbers = list(range(1, 104))"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 29,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "df['nr'] = numbers"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -726,9 +703,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "df.head()"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -943,9 +918,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "df[(df['nr']>29) & (df['nr']<40)]"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -959,9 +932,7 @@
    "execution_count": 37,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "df.drop('nr', axis=1, inplace=True)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1100,9 +1071,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "df.head()"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1201,9 +1170,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "df[df['1959'] == 0]"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1614,9 +1581,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "df[df['1897']>df['2019']]"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1693,9 +1658,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "df[df['2019']>df['2011']][['2019', '2011']]"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1794,15 +1757,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "df[(df['1897'] > df['1923']) &\n",
-    "   (df['1923'] > df['1959']) &\n",
-    "   (df['1959'] > df['1979']) &\n",
-    "   (df['1979'] > df['1989']) &\n",
-    "   (df['1989'] > df['2001']) &\n",
-    "   (df['2001'] > df['2011']) &\n",
-    "   (df['2011'] > df['2019'])] "
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1823,9 +1778,7 @@
    "execution_count": 70,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "proc_skirtumas = ((df['2019'] - df['1989'])/df['1989'])*100"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1841,11 +1794,7 @@
      ]
     }
    ],
-   "source": [
-    "print(f'\\\n",
-    "{proc_skirtumas.idxmax()}\\t {int(proc_skirtumas.max())}%\\n\\\n",
-    "{proc_skirtumas.idxmin()}\\t{int(proc_skirtumas.min())}%')"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1983,9 +1932,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "df.reset_index().head()"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
