pagamintos pandas3 užduotys

--- a/Pandas/Pandas_atsakymai3.ipynb
+++ b/Pandas/Pandas_atsakymai3.ipynb
@@ -840,7 +840,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# kadangi sąrašas iš vieno elemento nereikia spėlioti. Patogumo dėlei persivadiname DF. \n",
+    "# kadangi sąrašas iš vieno elemento, nereikia spėlioti. Patogumo dėlei persivadiname DF. \n",
     "miestai = data[0]"
    ]
   },
@@ -1403,7 +1403,8 @@
     }
    ],
    "source": [
-    "len([not isinstance(x, int) for x in miestai['2019']])"
+    "# naudojame list comprehension, patikrinti kiek reikšmių yra ne integer\n",
+    "len([not isinstance(x, int) for x in miestai['2019']]) "
    ]
   },
   {
@@ -1754,7 +1755,7 @@
     }
    ],
    "source": [
-    "# patikriname, kad per duomenų tipas, paaiškėja, kad jis mums tinka.\n",
+    "# patikrinus, kas per duomenų tipas, paaiškėja, kad jis mums tinka.\n",
     "type(miestai['1923'].loc['Trakai'])"
    ]
   },
