--- a/Machine Learning/linear_regression_atsakymas_2.ipynb
+++ b/Machine Learning/linear_regression_atsakymas_2.ipynb
@@ -1,11 +1,41 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Tiesinė regresija atsakymas 2"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib as plt\n",
+    "import seaborn as sns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wines = pd.read_csv('https://raw.githubusercontent.com/robotautas/kursas/master/Machine%20Learning/winequality-red.csv')"
+   ]
   }
  ],
  "metadata": {
