pridėta pradėta užduotis klasifikatorių

--- a/Machine Learning/klasifikatoriai_uzduotis.ipynb
+++ b/Machine Learning/klasifikatoriai_uzduotis.ipynb
@@ -2093,6 +2093,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Nors algoritmas save vertina geriau už kitus, pasitikrinus y_test reikšmes ir pažiūrėję į *confusion* matricą, matome, kad 8 ligoniams "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# KNearest Neighbors"
    ]
   },
