--- a/Pandas/pandas_uzduotys1.ipynb
+++ b/Pandas/pandas_uzduotys1.ipynb
@@ -25,7 +25,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2 Nuskaitykite į DF failą 'miestai isvalyti.csv', failą rasite čia: https://github.com/robotautas/kursas/tree/master/Pandas"
+    "### 2 Nuskaitykite į DF failą 'miestai isvalyti.csv', failą rasite [čia](https://github.com/robotautas/kursas/tree/master/Pandas)"
    ]
   },
   {
