--- a/Pandas/Pandas_uzduotys3.ipynb
+++ b/Pandas/Pandas_uzduotys3.ipynb
@@ -171,7 +171,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 3 Nuskaitykite į DF šį [failą]()"
+    "# 3 Nuskaitykite į DF šį [failą](https://github.com/robotautas/kursas/blob/master/Pandas/top_20_CA_wildfires.csv)"
    ]
   },
   {
