--- a/Machine Learning/linear_regression.ipynb
+++ b/Machine Learning/linear_regression.ipynb
@@ -12,7 +12,7 @@
    "metadata": {},
    "source": [
     "### Dėmesio!\n",
-    "Statistikos ir matematikos čia neaptarinėsime, tik patį modelio veikimo principą, labai pavirutiniškai. Šios paskaitos yra orientuotos į rezultatą, o teoriją, kam įdomu, pasistudijuokite savarankiškai."
+    "Statistikos ir matematikos čia neaptarinėsime, tik patį modelio veikimo principą, labai paviršutiniškai. Šios paskaitos yra orientuotos į rezultatą, o ne teoriją. Kam įdomu, pasistudijuokite savarankiškai."
    ]
   },
   {
