--- a/Pandas/Pandas 1.ipynb
+++ b/Pandas/Pandas 1.ipynb
@@ -919,7 +919,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.drop('naujas', 1, inplace=True)"
+    "df.drop('naujas', axis=1, inplace=True)"
    ]
   },
   {
