--- a/Machine Learning/modelio_naudojimas.ipynb
+++ b/Machine Learning/modelio_naudojimas.ipynb
@@ -10,7 +10,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -24,7 +26,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline"
@@ -40,16 +44,28 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "iris = sns.load_dataset('iris')\n",
     "cols = iris.columns.tolist()\n",
     "X = iris[cols[:-1]]\n",
-    "y = iris['species']\n",
+    "y = iris['species']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
     "X_train, X_test, y_train, y_test = \\\n",
     "train_test_split(X, y, test_size=0.4, random_state=42)\n",
-    "# model = RandomForestClassifier(n_estimators = 10000).fit(X_train, y_train)"
+    "model = RandomForestClassifier(n_estimators = 10000).fit(X_train.values, y_train.values)"
    ]
   },
   {
@@ -62,8 +78,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import pickle"
@@ -71,12 +89,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "# with open ('iris_predictor.pickle', 'wb') as f:\n",
-    "#     pickle.dump(model, f)"
+    "with open ('iris_predictor.pickle', 'wb') as f:\n",
+    "    pickle.dump(model, f)"
    ]
   },
   {
@@ -88,8 +108,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "pickled_model = open('iris_predictor.pickle', 'rb')\n",
@@ -98,8 +120,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -107,13 +131,13 @@
        "0.9833333333333333"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "loaded_model.score(X_test, y_test)"
+    "loaded_model.score(X_test.values, y_test.values)"
    ]
   },
   {
@@ -139,8 +163,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -224,7 +250,7 @@
        "4           5.0          3.6           1.4          0.2  setosa"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,18 +261,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
+   "execution_count": 10,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Sepal length:  4.7\n",
+      "Sepal width:  3.2\n",
+      "Petal length:  1.3\n",
+      "Petal width:  0.2\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sepal length: 4.2\n",
-      "Sepal width: 4.2\n",
-      "Petal length: 2.1\n",
-      "Petal width: 0.3\n",
-      "My holy prediction is setosa!\n"
+      "My holy prediction is ['setosa']!\n"
      ]
     }
    ],
@@ -258,7 +292,7 @@
     "\n",
     "prediction = loaded_model.predict([[sepal_length, sepal_width, petal_length, petal_width]])\n",
     "# metodas reikalauja 2d array, todėl [[]]\n",
-    "print(f'My holy prediction is {prediction[0]}!')"
+    "print(f'My holy prediction is {prediction}!')"
    ]
   },
   {
@@ -278,7 +312,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -292,9 +326,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
